--- a/LibraryWebApp/Views/Shared/_Layout.cshtml
+++ b/LibraryWebApp/Views/Shared/_Layout.cshtml
@@ -20,13 +20,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
-                    <li>@Html.ActionLink("Locations & Hours", "LocationsHours", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @*<li>@Html.ActionLink("Locations & Hours", "LocationsHours", "Home")</li>
                     <li>@Html.ActionLink("Events & Videos", "EventsVideos", "Home")</li>
                     <li>@Html.ActionLink("Using the Library", "UsingTheLibrary", "Home")</li>
-                    <li>@Html.ActionLink("Catalog", "Catalog", "Home")</li>
+                    <li>@Html.ActionLink("Catalog", "Catalog", "Home")</li>*@
                 </ul>
             </div>
         </div>
