--- a/LibraryWebApp/Views/Publisher/UpdatePublisher.cshtml
+++ b/LibraryWebApp/Views/Publisher/UpdatePublisher.cshtml
@@ -9,9 +9,9 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        
+
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -71,5 +71,20 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back", "GetPublishers")
 </div>
+
+@section Scripts
+{
+
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+
+            $('#tblUsers').DataTable();
+
+        });
+
+    </script>
+
+}
