--- a/LibraryWebApp/Views/User/CreateUser.cshtml
+++ b/LibraryWebApp/Views/User/CreateUser.cshtml
@@ -55,9 +55,10 @@
         </div>
 
         <div class="form-group">
+            
             @Html.LabelFor(model => model.RoleID_FK, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.RoleID_FK, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("RoleID_FK", (IEnumerable<SelectListItem>)ViewBag.Roles, null, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.RoleID_FK, "", new { @class = "text-danger" })
             </div>
         </div>
