--- a/LibraryWebApp/Views/Publisher/GetPublishers.cshtml
+++ b/LibraryWebApp/Views/Publisher/GetPublishers.cshtml
@@ -1,6 +1,16 @@
 ﻿@model LibraryWebApp.Models.PublisherListVM
 @using LibraryWebApp.Models
 
+<script type="text/javascript">
+
+    $(document).ready(function () {
+
+        $('#tblUsers').DataTable();
+
+    });
+
+</script>
+
 @{
     ViewBag.Title = "GetPublishers";
 }
