--- a/LibraryWebApp/Views/User/GetUsers.cshtml
+++ b/LibraryWebApp/Views/User/GetUsers.cshtml
@@ -19,6 +19,7 @@
             <th>Username</th>
             <th hidden="hidden"></th>
             <th hidden="hidden"></th>
+            <th hidden="hidden"></th>
             <th>Update Role</th>
             <th>Delete Role</th>
         </tr>
