--- a/LibraryWebApp/Views/_ViewStart.cshtml
+++ b/LibraryWebApp/Views/_ViewStart.cshtml
@@ -1,3 +1,32 @@
-﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+﻿@using LibraryCommon;
+@using LibraryWebApp.Models;
+
+@{ 
+    if (Session["UserSession"] != null)
+    {
+        UserModel _sessionUser;
+        _sessionUser = (UserModel)Session["UserSession"];
+
+        if (_sessionUser.RoleID_FK == (int)RoleType.Administrator)
+        {
+            Layout = "~/Views/Shared/_Layout_Administrator.cshtml";
+        }
+        else if (_sessionUser.RoleID_FK == (int)RoleType.Librarian)
+        {
+            Layout = "~/Views/Shared/_Layout_Librarian.cshtml";
+        }
+        else if (_sessionUser.RoleID_FK == (int)RoleType.Patron)
+        {
+            Layout = "~/Views/Shared/_Layout_Patron.cshtml";
+        }
+        else // anonymous
+        {
+            Layout = "~/Views/Shared/_Layout.cshtml";
+        }
+    }
+    else
+    {
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }
 }
+
