--- a/LibraryWebApp/Views/Home/Login.cshtml
+++ b/LibraryWebApp/Views/Home/Login.cshtml
@@ -39,3 +39,20 @@
 
 }
 
+@*@section scripts {
+
+    <script type="text/javascript" language="javascript">
+       
+        $(document).ready(function () {
+            var SuccessOrFailure = @Html.Raw(Json.Encode(Model.DialogMessageType));
+            if (SuccessOrFailure === 'Success') {
+                $('#dialogSuccess').show();
+            }
+             if (SuccessOrFailure === 'Failure') {
+                $('#dialogFailure').show();
+            }
+        });
+    </script>
+
+}*@
+
