--- a/LibraryWebApp/Views/Shared/_Layout.cshtml
+++ b/LibraryWebApp/Views/Shared/_Layout.cshtml
@@ -3,13 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Library Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    
+    @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">*@
+
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top navbar-header-library">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -17,19 +18,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Library Application", "Search", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Register", "Register", "Home")</li>
-                    <li>@Html.ActionLink("Login", "Login", "Home")</li>
                     @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("About", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        <li>@Html.ActionLink("Locations & Hours", "LocationsHours", "Home")</li>
-                        <li>@Html.ActionLink("Events & Videos", "EventsVideos", "Home")</li>
-                        <li>@Html.ActionLink("Using the Library", "UsingTheLibrary", "Home")</li>
-                        <li>@Html.ActionLink("Catalog", "Catalog", "Home")</li>*@
+                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                    <li><a href="~/Static/usingthelibrary.html">Using The Library</a></li>
+                    <li><a href="~/Static/locationandhours.html">Location & Hours</a></li>
+                    <li>@Html.ActionLink("Search", "Search", "Home")</li>
+                    <li>@Html.ActionLink("Register", "Register", "Home")</li>
+                    <li>@Html.ActionLink("Login", "Login", "Home")</li>
                 </ul>
             </div>
         </div>
@@ -37,10 +37,27 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
     </div>
+
+    <footer class="footer-library">
+        <p>
+            <img src="https://www.dbrl.org/wp-content/themes/cw-dbrl-theme/images/DBRL-linear-white.png" style="width:400px;" />
+            <i class="fa fa-twitter" style="font-size:24px"></i>
+            <i class="fa fa-instagram" style="font-size:24px"></i>
+            <i class="fa fa-youtube" style="font-size:24px"></i>
+        </p>
+        <div>
+            <a href="https://www.dbrl.org/about">ABOUT US</a>
+            <a href="https://www.dbrl.org/about/governance">GOVERNANCE</a>
+            <a href="https://www.dbrl.org/about/accessibility">ACCESSIBILITY</a>
+            <a href="https://www.dbrl.org/employment">EMPLOYMENT</a>
+            <a href="https://www.dbrl.org/giving">GIVE TO YOUR LIBRARY</a>
+            <i class="glyphicon-envelope" style="font-size:24px"><a href="mailto:giancarlo.rhodes@onshoreoutsourcing.com"></a></i>
+            @*<p>&copy; @DateTime.Now.Year - Library Application</p>*@
+        </div>
+    </footer>
+
+
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
@@ -48,3 +65,22 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+© 2021 GitHub, Inc.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
