--- a/LibraryWebApp/Views/Publisher/GetPublishers.cshtml
+++ b/LibraryWebApp/Views/Publisher/GetPublishers.cshtml
@@ -1,15 +1,6 @@
 ﻿@model LibraryWebApp.Models.PublisherListVM
 @using LibraryWebApp.Models
 
-<script type="text/javascript">
-
-    $(document).ready(function () {
-
-        $('#tblUsers').DataTable();
-
-    });
-
-</script>
 
 @{
     ViewBag.Title = "GetPublishers";
@@ -84,3 +75,18 @@
 <div>
     <input value="Add Publisher" type="button" class="btn btn-info" onclick="window.location='@Url.Action("CreatePublisher", "Publisher")'" />
 </div>
+
+@section Scripts
+{
+
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+
+            $('#tblPublishers').DataTable();
+
+        });
+
+    </script>
+
+}
